# thinkingmindsd

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: README.md
src-tauri/resources/standalone/: package.json  server.js
src-tauri/src/: lib.rs  main.rs  state.rs  store_util.rs
src-tauri/src/accounting/: service.rs
src-tauri/src/admin/: access.rs  mod.rs  plans.rs  service.rs
src-tauri/src/analytics/: service.rs
src-tauri/src/assets/: service.rs
src-tauri/src/audit/: service.rs
src-tauri/src/auth/: mod.rs  models.rs  password.rs  service.rs  session.rs  users.rs
src-tauri/src/commands/: accounting.rs  admin.rs  analytics.rs  assets.rs  audit.rs  auth.rs  crm.rs  currencies.rs  finance.rs  fiscal.rs  helpdesk.rs  inventory.rs  join_requests.rs  knowledge_base.rs  licensing.rs  mod.rs  orgs.rs  overrides.rs  payments.rs  payroll.rs  plans.rs  pos.rs  projects.rs  purchase_orders.rs  receipt.rs  school.rs  user_profile.rs  user_requests.rs  users.rs
src-tauri/src/crm/: service.rs
src-tauri/src/currencies/: service.rs
src-tauri/src/db/: collections.rs  crypto.rs  mod.rs  store.rs
src-tauri/src/finance/: service.rs
src-tauri/src/fiscal/: client.rs  connectivity.rs  constants.rs  fiscal_day.rs  math.rs  mod.rs  receipt.rs  register.rs  service.rs  signature.rs
src-tauri/src/helpdesk/: service.rs
src-tauri/src/inventory/: service.rs
src-tauri/src/join_requests/: service.rs
(+787 files in other folders)
