[package]
name = "thinkingmindserp"
version = "0.1.0"
description = "Desktop shell for the Thinking Minds ERP Next.js app"
authors = ["Thinking Minds"]
license = "MIT"
edition = "2021"

# Required for Android/iOS: the JNI bridge loads a cdylib/staticlib, not only a bin.
[lib]
name = "thinkingmindserp"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
getrandom = "0.2"
scrypt = "0.11"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
rsa = { version = "0.9", features = ["sha2", "pem"] }
rand = "0.8"
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"

[features]
default = []
